# unitree_ros2

./: .gitignore  AGENTS.md  CHANGELOG.md  README _zh.md  README.md  setup.sh  setup_myself.sh
.github/: AGENTS.md
cyclonedds_ws/: AGENTS.md
cyclonedds_ws/src/unitree/unitree_api/: CMakeLists.txt
cyclonedds_ws/src/unitree/unitree_go/: CMakeLists.txt
cyclonedds_ws/src/unitree/unitree_hg/: CMakeLists.txt
docs/: AGENTS.md  g1_loco_service_usage.md  g1_motion_switcher_usage.md
docs/emergency_stop_docs/: g1_emergency_stop_autostart.md  g1_emergency_stop_v1.0.0_completion_report.md  g1_loco_service_usage.md  g1_motion_switcher_usage.md
example/: AGENTS.md
example/src/: CMakeLists.txt  package.xml
example/src/include/common/: base_client.hpp  ut_errror.hpp
example/src/include/g1/: g1_arm_action_client.hpp  g1_audio_client.hpp  g1_loco_client.hpp  g1_motion_switch_client.hpp
example/src/src/g1/: AGENTS.md
example/src/src/g1/GPIO/: AGENTS.md  CMakeLists.txt  gpio_estop.hpp  main.cpp
example/src/src/g1/audio_client/: g1_tts_led_control_example.cpp
example/src/src/g1/high_level/: g1_emergency_stop_node.cpp  g1_inspire_hand_to_joint_states.cpp  g1_inspire_hand_touch_to_visualization.cpp  g1_loco_service_example.cpp  g1_lowstate_to_joint_states.cpp  g1_motion_switcher_example.cpp
foxglove/: AGENTS.md  foxglove_usage_zh.md  g1_foxglove copy 2.json  g1_foxglove copy.json  g1_foxglove.json  g1_foxglove_audit.md  g1_foxglove_layout.template copy.json  g1_foxglove_layout.template.json  run_foxglove_bridge_g1 copy.sh  run_foxglove_bridge_g1.sh  teleimager_foxglove.md  teleimager_to_ros_image.py  tf_g1_realsense.md
foxglove/my-panel/: CHANGELOG.md  README.md  package-lock.json  package.json  unknown.my-panel-0.0.0.foxe
foxglove/my-panel/src/: G1HeatmapPanel.tsx  index.ts
scripts/: install_g1_emergency_stop_service.sh  run_g1_emergency_stop_node.sh  uninstall_g1_emergency_stop_service.sh
